--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,42 +1,17 @@
 version: 2.1
-
 orbs:
-  docker: circleci/docker@0.5.13
-
+  node: circleci/node@1.1.6
 jobs:
-  run_tests:
-    working_directory: ~/react-app
-    docker:
-      - image: circleci/node:10.16.3
+  build-and-test:
+    executor:
+      name: node/default
     steps:
       - checkout
-      - run:
-          name: update-npm
-          command: 'sudo npm install -g npm@latest'
-      - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-      - run:
-          name: npm-install
-          command: npm install
-      - save_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
-          paths:
-            - ./node_modules
-      - run:
-          name: test
-          command: npm test
-  
+      - node/with-cache:
+          steps:
+            - run: npm install
+            - run: npm test
 workflows:
-  version: 2
-  build_deploy:
-    jobs:
-      - run_tests
-      - docker/publish:
-          image: gumshoe/$CIRCLE_PROJECT_REPONAME
-          dockerfile: dockerfile
-          requires:
-            - run_tests
-          filters:
-            branches:
-              only: 
-                - master
+    build-and-test:
+      jobs:
+        - build-and-test
